--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,5 +1,6 @@
 repositories {
     mavenCentral()
+    maven { url = 'https://maven.brott.dev/' }
     google() // Needed for androidx
 }
 
@@ -14,4 +15,5 @@ dependencies {
     implementation 'org.firstinspires.ftc:Vision:10.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.10'
 }
